java script add

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
       pariatur obcaecati voluptates.
     </p>
     <h1>first project</h1>
+    <script>
+      alert("im inside water");
+    </script>
   </body>
 </html>
