--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </p>
     <h1>first project</h1>
     <script>
-      alert("im inside water");
+      console.log(2 + 3);
+      console.log("good morning" + "bapunu");
+      console.warn("do not touch");
     </script>
   </body>
 </html>
