--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       console.log(2 + 3);
       console.log("good morning" + "bapunu");
       console.warn("do not touch");
+      console.error("this is an error");
     </script>
   </body>
 </html>
