first function in js

--- a/index.html
+++ b/index.html
@@ -7,18 +7,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione culpa
-      dolorum vitae dolorem reiciendis provident eos deserunt possimus
-      obcaecati? Nisi iure quas beatae officiis voluptate temporibus quia
-      pariatur obcaecati voluptates.
-    </p>
     <h1>first project</h1>
-    <script>
-      console.log(2 + 3);
-      console.log("good morning" + "bapunu");
-      console.warn("do not touch");
-      console.error("this is an error");
-    </script>
+    <button id="click_me" onclick="alert('i am clicked')">click me</button>
+
+    <script></script>
   </body>
 </html>
