--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>first project</h1>
     <button id="click_me" onclick="alert('i am clicked')">click me</button>
 
-    <script></script>
+    <script src="index.js"></script>
   </body>
 </html>
