change some variety

--- a/profile card demo/index.html
+++ b/profile card demo/index.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>profile card ui design</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
-  <body></body>
+  <body>
+<div class="wrapper">
+  <form action="">
+    <h1>Login</h1>
+    <div class="input_box">
+      <input type="text" placeholder="username"
+      required>
+      <box-icon name='user'></box-icon>
+    </div>
+    <div class="input_box">
+<input type="password" placeholder="password" required>
+<box-icon name='lock-alt' type='solid' ></box-icon>
+    </div>
+    <div class="remember_forgot">
+<label><input type="checkbox">remember me</label>
+  <a href="#">Forgot password?</a>
+    </div>
+<button type="submit" class="btn">Login</button>
+<div class="register_link">
+<p> don't have an account?<a href="#">Register</a></p>
+
+</div>
+
+  </form>
+
+
+  </body>
 </html>
